Update account page

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -193,7 +193,7 @@
                     </form>
                 </div>
                 <div class="LaS-item">
-                    <button type="form-edit" class="">Manage Tutoring Request</button>
+                    <button type="form-edit" class="">Manage Tutoring Requests</button>
                 </div>
             </div>
         </div>
