Update tutor request btn

--- a/src/main/resources/templates/account.html
+++ b/src/main/resources/templates/account.html
@@ -193,7 +193,9 @@
                     </form>
                 </div>
                 <div class="LaS-item">
-                    <button type="form-edit" class="">Manage Tutoring Requests</button>
+                    <a th:href="@{/account/tutorRequest}" class="tutorRequest-btn">
+                        <button type="form-edit" class="">Manage Tutoring Requests</button>
+                    </a>
                 </div>
             </div>
         </div>
