--- a/src/main/resources/static/css/tutorRequest.css
+++ b/src/main/resources/static/css/tutorRequest.css
@@ -1,9 +1,9 @@
 .body-container {
-    /* text-align: center; */
+    text-align: center;
     align-items: center;
     justify-content: center;
-    width: 50vw;
-    min-height: 72vh;
+    width: 80vw;
+    min-height: 35vh;
     margin-left: auto;
     margin-right: auto;
     margin-top: 7vh;
@@ -13,4 +13,109 @@
     background: #fefefe;
     border-radius: 30px;
     box-shadow:0 1px 2px rgba(0,0,0,0.07),0 2px 4px rgba(0,0,0,0.07),0 4px 8px rgba(0,0,0,0.07),0 8px 16px rgba(0,0,0,0.07),0 16px 32px rgba(0,0,0,0.07),0 32px 64px rgba(0,0,0,0.07);
+}
+
+/* edit */
+.tutoring-service {
+    align-items: center;
+    width: 100%;
+    height: 50px;
+    background: #fefefe;
+    margin-bottom: 10px;
+}
+
+.post-tutoring-service {
+    background: #4169e1;
+    color: #fefefe;
+    width: 40%;
+    height: 100%;
+    font-weight: bold;
+    border-radius: 30px;
+    border: none;
+    cursor: pointer;
+    margin-right: 10px;
+}
+
+/* tutor container wrapper */
+.tutor-wrapper {
+    display: grid;
+    height: 90%;
+}
+
+/* main container */
+.tutor-container {
+    display: flex;
+    width: 100%;
+    height: 90%;
+    background: #4169e1;
+    border-radius: 30px;
+    box-shadow:0 1px 2px rgba(0,0,0,0.07),0 2px 4px rgba(0,0,0,0.07),0 4px 8px rgba(0,0,0,0.07),0 8px 16px rgba(0,0,0,0.07),0 16px 32px rgba(0,0,0,0.07),0 32px 64px rgba(0,0,0,0.07);
+}
+
+.tutor-container .tutor-img {
+    margin-left: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    margin-right: 1%;
+    width: 18%;
+    height: 85%;
+    background: #fefefe;
+    border-radius: 30px;
+}
+
+.tutor-img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 30px;
+}
+
+.tutor-container .tutor-inner-container {
+    display: flex;
+    margin-right: auto;
+    margin-top: auto;
+    margin-bottom: auto;
+    width: 78%;
+    height: 85%;
+    background: #fefefe;
+    border-radius: 30px;
+}
+
+.tutor-inner-container .tutor-info {
+    display: grid;
+    width: 60%;
+    height: 100%;
+    padding: 10px 30px;
+    text-align: left;
+}
+
+.tutor-inner-container .tutor-intro {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    width: 100%;
+    height: 100%;
+}
+
+.tutor-intro span {
+    width: 100%;
+}
+
+.tutor-inner-container .tutor-edit {
+    display: flex;
+    flex: 40%;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.tutor-edit button {
+    background: #4169e1;
+    color: #fefefe;
+    font-weight: bold;
+    border-radius: 30px;
+    border: none;
+    cursor: pointer;
+    height: 20%;
+    width: 80%;
 }
