Update tutorRequest page

--- a/src/main/resources/templates/tutorRequest.html
+++ b/src/main/resources/templates/tutorRequest.html
@@ -77,8 +77,8 @@
             <form action="" class="form" method="post" id="post-form">
                 <h1>Post your tuoring service</h1>
                 <div class="element-method">
-                    <input type="radio" name="method" id="method-online" value="online" checked>
-                    <input type="radio" name="method" id="method-inperson" value="inperson">
+                    <input type="radio" class="method" name="method" id="method-online" value="online" checked>
+                    <input type="radio" class="method" name="method" id="method-inperson" value="inperson">
                     <label for="method-online" class="option method-online">
                         <div class="dot"></div>
                         <span>Online</span>
@@ -89,9 +89,9 @@
                     </label>
                 </div>
                 <div class="element-subject">
-                    <input type="radio" name="subject" id="subject-prog" value="online" checked>
-                    <input type="radio" name="subject" id="subject-math" value="inperson">
-                    <input type="radio" name="subject" id="subject-eng" value="online">
+                    <input type="radio" class="subject" name="subject" id="subject-prog" value="online" checked>
+                    <input type="radio" class="subject" name="subject" id="subject-math" value="inperson">
+                    <input type="radio" class="subject" name="subject" id="subject-eng" value="online">
                     <label for="subject-prog" class="option subject-prog">
                         <div class="dot"></div>
                         <span>Programming</span>
