--- a/src/main/resources/templates/tutorRequest.html
+++ b/src/main/resources/templates/tutorRequest.html
@@ -192,6 +192,7 @@
             }
         </script>
         <script src="../js/signinAndSignup.js"></script>
+        <script src="../js/lesson.js"></script>
         <script src="../js/tutorRequest.js"></script>
     </body>
 </html>
