--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -63,7 +63,7 @@
                 </div>
             </div>
             <div class="form-outer">
-                <form action="/api/lesson/search" method="post">
+                <form action="/result" method="get">
                     <div class="page slidepage">
                         <button class="w-btn1 w-btn-blue nextBtn" type="button" value="inperson" onclick="getMethod(this)">
                             In-person
@@ -71,6 +71,7 @@
                         <button class="w-btn1 w-btn-blue nextBtn" type="button" value="online" onclick="getMethod(this)">
                             Online
                         </button>
+                        <input type="hidden" id="method" name="method" value="">
                     </div>
 
                     <div class="page">
@@ -83,18 +84,20 @@
                         <button class="w-btn2 w-btn-blue nextBtn" type="button" value="english" onclick="getSubject(this)">
                             English
                         </button>
+                        <input type="hidden" id="subject" name="subject" value="">
                     </div>
 
                     <div class="page">
-                        <button class="w-btn2 w-btn-blue submitBtn" type="button" value="40" onclick="getPrice(this)">
+                        <button class="w-btn2 w-btn-blue submitBtn" type="submit" value="40" onclick="getPrice(this)">
                             $40 - $50
                         </button>
-                        <button class="w-btn2 w-btn-blue submitBtn" type="button" value="50" onclick="getPrice(this)">
+                        <button class="w-btn2 w-btn-blue submitBtn" type="submit" value="50" onclick="getPrice(this)">
                             $50 - $60
                         </button>
-                        <button class="w-btn2 w-btn-blue submitBtn" type="button" value="60" onclick="getPrice(this)">
+                        <button class="w-btn2 w-btn-blue submitBtn" type="submit" value="60" onclick="getPrice(this)">
                             $60 - $70
                         </button>
+                        <input type="hidden" id="price" name="price" value="">
                     </div>
                 </form>
             </div>
