Update home page

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -64,6 +64,7 @@
             </div>
             <div class="form-outer">
                 <form action="/result" method="get">
+                    <input type="hidden" name="page" value="1">
                     <div class="page slidepage">
                         <button class="w-btn1 w-btn-blue nextBtn" type="button" value="inperson" onclick="getMethod(this)">
                             In-person
