--- a/src/main/resources/static/css/result.css
+++ b/src/main/resources/static/css/result.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
     width: 80vw;
-    height: 1600px;
+    max-height: 3500px;
     margin-left: auto;
     margin-right: auto;
     margin-top: 7vh;
@@ -19,7 +19,7 @@
 .edit-container {
     display: flex;
     width: 100%;
-    height: 2.5%;
+    height: 40px;
     background: #fefefe;
     margin-bottom: 10px;
 }
@@ -45,7 +45,7 @@
     display: flex;
     margin-bottom: 20px;
     width: 100%;
-    height: 14.2%;
+    height: 220px;
     background: #4169e1;
     border-radius: 30px;
     box-shadow:0 1px 2px rgba(0,0,0,0.07),0 2px 4px rgba(0,0,0,0.07),0 4px 8px rgba(0,0,0,0.07),0 8px 16px rgba(0,0,0,0.07),0 16px 32px rgba(0,0,0,0.07),0 32px 64px rgba(0,0,0,0.07);
