--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -66,7 +66,17 @@
                     </div>
                 </div>
             </div>
+
+            <div style="display:none">
+                <form action="/result" method="get">
+                    <input type="hidden" id="page" th:value="${page}">
+                    <input type="hidden" id="method" th:value="${method}">
+                    <input type="hidden" id="subject" th:value="${subject}">
+                    <input type="hidden" id="price" th:value="${price}">
+                </form>
+            </div>
             
+            <input type="hidden" id="totalPage" th:value="${totalPage}">
             <div class="pagination">
                 <ul class="ul">
                     <!-- <li class="btn prev"><span><i class="fas fa-angle-left"></i> Prev</span></li>
