--- a/src/main/resources/templates/tutoringPost.html
+++ b/src/main/resources/templates/tutoringPost.html
@@ -9,7 +9,7 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../css/nav.css">
-        <link rel="stylesheet" href="../css/tutorRequest.css">
+        <link rel="stylesheet" href="../css/tutoringPost.css">
         <link rel="stylesheet" href="../css/popup.css">
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
         <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
@@ -44,7 +44,7 @@
         <!-- boby -->
         <div class="body-container">
             <div class="tutoring-service">
-                <button class="post-tutoring-service" type="button" onclick="openPostForm()">Register a tutoring service</button>
+                <button class="post-tutoring-service" type="button" onclick="openPostForm()">Post a tutoring lesson</button>
             </div>
             <div class="tutor-wrapper">
                 <div class="tutor-container">
@@ -75,7 +75,7 @@
         <div class="popup-post">
             <div class="popup-close" id="post-close" onclick="closePostForm()">&times;</div>
             <form action="" class="form" method="post" id="post-form">
-                <h1>Post your tuoring service</h1>
+                <h1>Post your tuoring lesson</h1>
                 <div class="element-method">
                     <input type="radio" class="method" name="method" id="method-online" value="online" checked>
                     <input type="radio" class="method" name="method" id="method-inperson" value="inperson">
@@ -193,6 +193,6 @@
         </script>
         <script src="../js/signinAndSignup.js"></script>
         <script src="../js/lesson.js"></script>
-        <script src="../js/tutorRequest.js"></script>
+        <script src="../js/tutoringPost.js"></script>
     </body>
 </html>
